# OpenSkald

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  bootstrap.py  cli.py  main.py
backend/app/agents/: content_agent.py  growth_agent.py  knowledge_ingestion_agent.py  orchestrator.py  publishing_agent.py  reflection_agent.py  research_agent.py  review_agent.py  runtime.py  skill_evolution_agent.py  writing_agent.py
backend/app/api/: routes.py
backend/app/config/: settings.py
backend/app/domain/: models.py
backend/app/knowledge/: openskald.py  openviking.py
backend/app/llm/: provider.py
backend/app/memory/: backend.py  store.py
backend/app/ops/: status.py
backend/app/publishers/x/: publisher.py
backend/app/skills/article_summary/: skill.yaml
config/: config.yaml  demo.yaml  local.yaml
docs/: API.md  API_CN.md  ARCHITECTURE.md  ARCHITECTURE_CN.md  README.md  README_CN.md
scripts/: check.sh  demo.sh  start.sh
tasks/: todo.md
tests/: conftest.py  test_agent_llm.py  test_api_publish.py  test_app_smoke.py  test_cli.py  test_config.py  test_content_agent.py  test_growth_agent.py  test_knowledge_ingestion.py  test_memory_backend.py  test_memory_records.py  test_openskald.py  test_openviking.py  test_orchestrator.py  test_publishers.py  test_reflection_agent.py  test_research_agent.py  test_review_agent.py  test_review_fixes.py  test_runtime.py
