[project]
name = "openskald-content-agent"
version = "0.1.0"
description = "Self-hosted AI content automation platform for OpenSkald knowledge bases."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
]

[project.scripts]
openskald = "backend.app.cli:main"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
